# predicting-property-prices-using-mlops-techniques

./: API_DOCUMENTATION.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  FEATURES.md  LICENSE  Makefile  README.md  SETUP.md  docker-compose.yml  mlflow.db  pyproject.toml  requirements.txt  top_features.json
mlruns/1/models/m-32b588fa79d34236982ce0f5439bbc64/artifacts/: MLmodel
mlruns/1/models/m-59a317e5d87342bd8182c3a8306b7c02/artifacts/: MLmodel  requirements.txt
mlruns/1/models/m-5d64be8a209643c28edfc9aefc843425/artifacts/: MLmodel
mlruns/1/models/m-64eaba39bed24043904547832e8f9bb3/artifacts/: MLmodel  conda.yaml
mlruns/1/models/m-75199774b51842c680d8238d5bfb0b80/artifacts/: MLmodel
mlruns/1/models/m-7dea2792e1a7472a996d1d622727bcea/artifacts/: MLmodel
mlruns/1/models/m-7ea8200b4c8a4dadb6c9111a26a11583/artifacts/: MLmodel
mlruns/1/models/m-a214459a58d141fdb10529e4d4a14f46/artifacts/: MLmodel
mlruns/1/models/m-b9cb133bc96d46678d7ecb02b56a0fc4/artifacts/: MLmodel
mlruns/1/models/m-bbc33b621fc64aeb870e7db682bcd3a7/artifacts/: MLmodel
mlruns/1/models/m-bd649954039649ad87f8efd5890b1b2e/artifacts/: MLmodel
mlruns/1/models/m-bd88e293f9fd4a6aa132e5f466f6db8e/artifacts/: MLmodel
mlruns/1/models/m-caade06144ab40b4b0e08598e77270d5/artifacts/: MLmodel
mlruns/1/models/m-e936622cb26e40b8bf9495aac18e843a/artifacts/: MLmodel
scripts/: REQUEST_EXAMPLES.md  start-dev.ps1  start-dev.sh  stop-dev.ps1  stop-dev.sh
src/: app.py  data_prep.py  serve.py  train.py
tests/: test_data_prep.py  test_serve.py  test_train.py
(+2 files in other folders)
